[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/modloader.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -78, 96 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1035.0
margin_bottom = 615.0
color = Color( 0.227451, 0.282353, 0.4, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 307.0
margin_bottom = 615.0
color = Color( 0.25098, 0.337255, 0.517647, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 17.0
margin_top = 29.0
margin_right = 293.0
margin_bottom = 46.0
text = "Official Repository by Abby"

[node name="Label7" type="Label" parent="."]
margin_left = 808.0
margin_top = 399.0
margin_right = 924.0
margin_bottom = 430.0

[node name="Label2" type="Label" parent="."]
margin_left = 16.0
margin_top = 50.0
margin_right = 114.0
margin_bottom = 71.0
rect_scale = Vector2( 2, 2 )
text = "Example Mod"

[node name="Label3" type="Label" parent="."]
margin_left = 336.0
margin_top = 50.0
margin_right = 434.0
margin_bottom = 71.0
rect_scale = Vector2( 2, 2 )
text = "Drivers List"

[node name="Label4" type="Label" parent="."]
margin_left = 677.0
margin_top = 50.0
margin_right = 785.0
margin_bottom = 71.0
rect_scale = Vector2( 2, 2 )
text = "Constructors List"

[node name="Button" type="Button" parent="."]
margin_left = 21.0
margin_top = 264.0
margin_right = 280.0
margin_bottom = 342.0
rect_pivot_offset = Vector2( 207, 14 )
text = "Copy Mod to Clipboard"

[node name="Button2" type="Button" parent="."]
margin_left = 21.0
margin_top = 364.0
margin_right = 280.0
margin_bottom = 442.0
rect_pivot_offset = Vector2( 207, 14 )
text = "Launch Mod"

[node name="Button3" type="Button" parent="."]
margin_left = 23.0
margin_top = 472.0
margin_right = 282.0
margin_bottom = 550.0
rect_pivot_offset = Vector2( 207, 14 )
text = "Return to Library"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 332.0
margin_top = 98.0
margin_right = 648.0
margin_bottom = 561.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
margin_left = 684.0
margin_top = 99.0
margin_right = 1005.0
margin_bottom = 342.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer2"]

[node name="Label6" type="Label" parent="."]
margin_left = 676.0
margin_top = 354.0
margin_right = 784.0
margin_bottom = 375.0
rect_scale = Vector2( 2, 2 )
text = "Points System"

[node name="ScrollContainer3" type="ScrollContainer" parent="."]
margin_left = 679.0
margin_top = 394.0
margin_right = 1000.0
margin_bottom = 575.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer3"]

[node name="Label5" type="Label" parent="."]
visible = false
margin_left = 420.0
margin_top = 278.0
margin_right = 643.0
margin_bottom = 293.0
rect_scale = Vector2( 2, 2 )
text = "This repository or mod is corrupt!"

[node name="desc" type="Label" parent="."]
margin_left = 22.0
margin_top = 111.0
margin_right = 287.0
margin_bottom = 222.0
autowrap = true

[node name="desc2" type="Label" parent="."]
margin_left = 19.0
margin_top = 87.0
margin_right = 284.0
margin_bottom = 109.0
text = "Description"
autowrap = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
